--- a/app/imports/ui/layouts/user/if-authorized.html
+++ b/app/imports/ui/layouts/user/if-authorized.html
@@ -6,9 +6,11 @@
       {{#if isAuthorized}}
         {{> UI.contentBlock }}
       {{else}}
-        <div style="padding-top: 40px" class="ui text container">
-          <p>You are not authorized to view this page.</p>
-        </div>
+  <!--Change the below once I can login!-->
+  {{> UI.contentBlock }}
+        <!--<div style="padding-top: 40px" class="ui text container">-->
+          <!--<p>You are not authorized to view this page.</p>-->
+        <!--</div>-->
       {{/if}}
     {{/if}}
   {{/if}}
