--- a/app/imports/ui/layouts/user/user-footer.html
+++ b/app/imports/ui/layouts/user/user-footer.html
@@ -2,11 +2,11 @@
   <footer>
     <div style="padding-top: 15px" class="ui center aligned container">
         <hr>
-      <a href="http://bowfolios.github.io">BowFolios</a><br>
-        Sponsored by:<br>
-        Department of Information and Computer Sciences <br />
-        University of Hawaii<br />
-        Honolulu, HI 96822
+      <a >UH Tabletop Games</a><br>
+        Created by:<br>
+        Virginia Koday <br />
+        ICS314 Spring 2017<br />
+      University of Hawaii
     </div>
   </footer>
 </template>
