--- a/app/imports/ui/layouts/user/user-header.html
+++ b/app/imports/ui/layouts/user/user-header.html
@@ -2,10 +2,10 @@
   <div class="ui top fixed borderless inverted menu">
     <div class="ui container" style="height: 70px;">
       <div class="item"><h1>UH TableTop Games</h1></div>
-      <a class="{{isActiveRoute "Games_Page"}} item" href="{{pathFor "Games_Page" username=routeUserName}}">Upcoming Games</a>
+      <a class="{{isActiveRoute "Games_Page"}} item" href="{{pathFor "Games_Page" username=routeUserName}}">Browse Games</a>
 
-      <a class="{{isActiveRoute "Profile_Page"}} item" href="{{pathFor "Profile_Page" username=routeUserName}}">Profile</a>
-      <a class="{{isActiveRoute "Filter_Page"}} item" href="{{pathFor "Filter_Page" username=routeUserName}}">Filter</a>
+      <a class="{{isActiveRoute "Profile_Page"}} item" href="{{pathFor "Profile_Page" username=routeUserName}}">Calender</a>
+      <a class="{{isActiveRoute "Manage_Page"}} item" href="{{pathFor "Manage_Page" username=routeUserName}}">Manage Games</a>
       <img class="ui medium floated image" style="height: 70px; padding-bottom: -20px" src="/images/kitten.jpg">
       <div class="right aligned item">{{> Cas_Login }}</div>
     </div>
