--- a/app/imports/ui/layouts/user/user-header.html
+++ b/app/imports/ui/layouts/user/user-header.html
@@ -1,10 +1,11 @@
 <template name="User_Header">
   <div class="ui top fixed borderless inverted menu">
     <div class="ui container" style="height: 70px;">
-      <div class="item"><h1>UH TableTop Games</h1></div>
+      <div class="item"><h1><a class="{{isActiveRoute "Welcome_Page"}} item" href="{{pathFor "Welcome_Page" username=routeUserName}}">UH TableTop Games</a>
+        </h1></div>
       <a class="{{isActiveRoute "Games_Page"}} item" href="{{pathFor "Games_Page" username=routeUserName}}">Browse Games</a>
 
-      <a class="{{isActiveRoute "Profile_Page"}} item" href="{{pathFor "Profile_Page" username=routeUserName}}">Calender</a>
+      <a class="{{isActiveRoute "Calendar_Page"}} item" href="{{pathFor "Calendar_Page" username=routeUserName}}">Calendar</a>
       <a class="{{isActiveRoute "Manage_Page"}} item" href="{{pathFor "Manage_Page" username=routeUserName}}">Manage Games</a>
       <img class="ui medium floated image" style="height: 70px; padding-bottom: -20px" src="/images/kitten.jpg">
       <div class="right aligned item">{{> Cas_Login }}</div>
