Changed to unified div

--- a/app/imports/ui/layouts/user/user-footer.html
+++ b/app/imports/ui/layouts/user/user-footer.html
@@ -1,12 +1,16 @@
 <template name="User_Footer">
   <footer>
-    <div style="padding-top: 15px" class="ui center aligned container">
+    <div style="padding-top: 15px; text-align:center; background-color:#1b1c1d;" class="ui bottom borderless inverted container">
+    <div class="ui inverted text" style="text-color:white;">
+      <br>
         <hr>
       <a >UH Tabletop Games</a><br>
         Created by:<br>
-        Virginia Koday <br />
+        Virginia Koday, Jory Leech, Kevin Kawamura <br />
         ICS314 Spring 2017<br />
       University of Hawaii
     </div>
+    </div>
+
   </footer>
 </template>
