Fixed Visuals, added a Digits Database

--- a/app/imports/ui/layouts/user/user-footer.html
+++ b/app/imports/ui/layouts/user/user-footer.html
@@ -1,12 +1,13 @@
 <template name="User_Footer">
   <footer>
-    <div style="padding-top: 15px" class="ui center aligned container">
-        <hr>
+    <div style="padding-top: 15px;text-align:center;color:black;" class="ui center borderless inverted menu aligned container">
+        <div class="item centered center aligned"><hr>
       <a >UH Tabletop Games</a><br>
         Created by:<br>
         Virginia Koday <br />
         ICS314 Spring 2017<br />
       University of Hawaii
+        </div>
     </div>
   </footer>
 </template>
