--- a/app/imports/ui/layouts/user/user-footer.html
+++ b/app/imports/ui/layouts/user/user-footer.html
@@ -1,13 +1,13 @@
 <template name="User_Footer">
   <footer>
-    <div style="padding-top: 15px;text-align:center;color:black;" class="ui center borderless inverted menu aligned container">
-        <div class="item centered center aligned"><hr>
-      <a >UH Tabletop Games</a><br>
-        Created by:<br>
-        Virginia Koday <br />
-        ICS314 Spring 2017<br />
-      University of Hawaii
-        </div>
+    <div style="padding-top: 15px;text-align:center;color:white;" class="ui centered borderless inverted segment center aligned container">
+
+         <h4 class="ui header white">
+           <b>Created by:</b><br><hr>
+            Virginia Koday <br />
+            ICS314 Spring 2017<br />
+            University of Hawaii
+         </h4>
     </div>
   </footer>
 </template>
