Fixed calendar date

--- a/app/imports/ui/layouts/user/user-footer.html
+++ b/app/imports/ui/layouts/user/user-footer.html
@@ -4,7 +4,7 @@
 
          <h4 class="ui header white">
            <b>Created by:</b><br><hr>
-            Virginia Koday <br />
+            Virginia Koday , Jory Leech, & Kevin Kawamura<br />
             ICS314 Spring 2017<br />
             University of Hawaii
          </h4>
